- Set connection charset before calling mysql_real_connect for MYSQL   tables. This should fix bug MDEV-7343. modified:   storage/connect/ha_connect.cc   storage/connect/myconn.cpp   storage/connect/myconn.h   storage/connect/reldef.cpp   storage/connect/reldef.h   storage/connect/table.cpp   storage/connect/tabmysql.cpp   storage/connect/xtable.h

- Prevent double column evaluation when CONNECT does filtering
modified:
  storage/connect/connect.cc

- Export CreateFileMap and CloseMemMap (for OEM tables)
modified:
  storage/connect/maputil.h

- Add the compute function to be used on VALUE types.
  Preserve precision for DOUBLE values.
modified:
  storage/connect/value.cpp
  storage/connect/value.h

- Typo (in preparation to the future JSON table type)
modified:
  storage/connect/ha_connect.cc
  storage/connect/mycat.cc
  storage/connect/plgdbsem.h